# kotori

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  README.md  clippy.toml  diesel.toml  eslint.config.js  forge.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.mjs  rustfmt.toml  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vite.config.js  vite.config.ts  vite.main.config.ts  vite.renderer.config.ts
.cargo/: config.toml
.github/: dependabot.yml
.husky/: pre-commit
crates/entity/: Cargo.toml
crates/entity/src/entities/: book.rs  collection.rs  prelude.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20240320_134836_book.rs  m20240513_014639_collection.rs  m20240629_212842_folder.rs
desktop/: package.json  vite.config.js
desktop/crates/entity/: Cargo.toml
desktop/crates/entity/src/entities/: folder.rs  mod.rs
desktop/crates/migration/src/: main.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: error.rs  fs.rs  library.rs  macros.rs  main.rs  manager.rs  path.rs  prelude.rs  reader.rs  result.rs  server.rs  utils.rs
desktop/src-tauri/src/book/: active.rs  cover.rs  handle.rs  metadata.rs  mod.rs  structs.rs  title.rs
desktop/src-tauri/src/book/handle/: actor.rs  file.rs  message.rs  mod.rs  scheduler.rs  worker.rs
desktop/src-tauri/src/command/: collection.rs  library.rs  mod.rs  reader.rs
desktop/src-tauri/src/database/: book.rs  folder.rs  message.rs  mod.rs  schema.rs
desktop/src-tauri/src/database/actor/: book.rs  collection.rs  folder.rs  mod.rs
desktop/src-tauri/src/database/model/: book.rs  collection.rs  folder.rs  mod.rs
desktop/src-tauri/src/event/: mod.rs  payload.rs
desktop/src-tauri/src/image/: mock.rs  mod.rs
desktop/src-tauri/src/menu/: app.rs  macros.rs  mod.rs  reader.rs
desktop/src-tauri/src/menu/context/: library_book.rs  mod.rs  reader_page.rs
desktop/src-tauri/src/menu/context/reader/: page.rs
desktop/src-tauri/src/window/: app.rs  mod.rs  reader.rs
desktop/src/lib/: app.ts  commands.ts  sensors.ts  server.ts  string.ts
desktop/src/stores/: config.ts  index.ts
desktop/src/windows/main/: App.vue
desktop/src/windows/reader/: App.vue
desktop/types/: book.d.ts  collection.d.ts  payload.d.ts
desktop/types/autogenerated/: auto-imports.d.ts
main/: index.ts  tsconfig.json
main/events/: index.ts
main/utils/: error.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20240320_134836_init.rs
migrations/2024-07-29-225520_create_books/: up.sql
migrations/2024-07-29-230837_create_folders/: up.sql
migrations/2024-07-29-231758_create_collections/: down.sql  up.sql
renderer/: App.vue  index.ts
renderer/assets/: style.css
renderer/components/: BaseButton.vue  HeaderMenu.vue  LibraryEmpty.vue  LibraryGrid.vue  LibraryGridItem.vue  LibraryMenu.vue  LibraryMenuSearch.vue  LibraryMessageEmpty.vue  TheMainMenu.vue
renderer/composables/: index.ts  useAsyncState.ts  useElementSize.ts  useVisualNovels.ts
renderer/database/: index.ts
renderer/database/models/: abstract.ts  index.ts  visual-novel.ts
renderer/router/: index.ts
renderer/utils/: error.ts  fields.ts  ipc.ts  parser.ts  query.ts
renderer/views/: LibraryView.vue  VisualNovelView.vue
src/: App.vue  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: book.rs  command.rs  database.rs  error.rs  event.rs  events.rs  image.rs  library.rs  macros.rs  main.rs  menu.rs  prelude.rs  reader.rs  server.rs  state.rs  utils.rs
src-tauri/src/book/: active.rs  cover.rs  extractor.rs  handle.rs  json.rs  metadata.rs  mod.rs  page.rs  structs.rs  title.rs  value.rs
src-tauri/src/command/: collection.rs  library.rs  mod.rs  reader.rs
src-tauri/src/database/: book.rs  collection.rs  folder.rs  impl.rs  mod.rs  prelude.rs  traits.rs
src-tauri/src/database/entities/: book.rs  collection.rs  mod.rs  prelude.rs
src-tauri/src/database/impl/: book.rs  collection.rs  mod.rs
src-tauri/src/event/: mod.rs  payload.rs
src-tauri/src/image/: mod.rs
src-tauri/src/menu/: app.rs  context.rs  macros.rs  main.rs  mod.rs  prelude.rs  reader.rs
src-tauri/src/menu/context/: library.rs  mod.rs  reader.rs
src-tauri/src/menu/context/reader/: page.rs
src-tauri/src/reader/: mod.rs  window.rs
src-tauri/src/utils/: date.rs  event.rs  glob.rs  log.rs  mod.rs  path.rs  result.rs
src-tauri/src/window/: app.rs  mod.rs  reader.rs
src/assets/: index.css
src/components/ui/button/: Button.vue
src/components/ui/separator/: Separator.vue
src/events/: index.ts
src/lib/: app.ts  commands.ts  sensors.ts  server.ts
src/router/: guards.ts  index.ts
src/stores/: config.ts  index.ts  reader.ts
src/utils/: book.ts  command.ts  commands.ts  event.ts  index.ts  sensors.ts  server.ts
src/views/: Reader.vue
src/windows/collection/: App.vue  index.html  index.ts
src/windows/main/: App.vue  index.html  index.ts
src/windows/main/components/: BookGrid.vue  BookPreview.vue  LibraryMenu.vue  Navbar.vue  Sidebar.vue
src/windows/main/events/: index.ts
src/windows/main/lib/: book.ts  library.ts  sensors.ts  symbols.ts
src/windows/main/router/: index.ts  query.ts  routes.ts
src/windows/main/stores/: collection.ts  index.ts  library.ts
src/windows/main/utils/: symbols.ts
src/windows/main/views/: BookTag.vue  Collection.vue  Library.vue
src/windows/reader/: App.vue  index.html  index.ts
src/windows/reader/components/: DialogDeletePage.vue
src/windows/reader/events/: index.ts
src/windows/reader/lib/: book.ts  global.ts  index.ts  page.ts  reader.ts  sensors.ts
src/windows/reader/stores/: index.ts
src/windows/reader/utils/: page.ts
src/windows/reader/views/: Reader.vue
types/: auto-imports.d.ts  book.d.ts  components.d.ts  global.d.ts  index.d.ts
types/autogenerated/: auto-imports.d.ts  components.d.ts
types/events/: index.d.ts
typings/: index.d.ts
(+21 files in other folders)
