[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
description = "Multiplatform manga reader"
homepage = "https://github.com/ferreira-tb/kotori"
repository = "https://github.com/ferreira-tb/kotori"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.76"
publish = false
