[workspace]
members = ["src-tauri", "migration"]
resolver = "2"

[workspace.package]
description = "Multiplatform manga reader"
homepage = "https://github.com/ferreira-tb/kotori"
repository = "https://github.com/ferreira-tb/kotori"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"
publish = false

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
filetype_is_file = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"

[workspace.lints.clippy.pedantic]
level = "deny"
priority = -1
