[package]
name = "kotori"
version = "0.1.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[build-dependencies.tauri-build]
version = "2.0.0-beta.15"
features = []

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.83"
axum = "0.7.5"
chrono = "0.4.38"
futures = "0.3.30"
globset = "0.4.14"
image = "0.25.1"
indexmap = "2.2.6"
indoc = "2.0.5"
itertools = "0.12.1"
natord = "1.0.9"
rand = "0.8.5"
serde_json = "1.0.117"
tauri-plugin-clipboard-manager = "2.1.0-beta.2"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-manatsu = "0.10.7"
tauri-plugin-persisted-scope = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.5"
tauri-plugin-store = "2.0.0-beta.6"
tempfile = "3.10.1"
thiserror = "1.0.60"
walkdir = "2.5.0"
zip = "1.2.3"

[dependencies.console-subscriber]
version = "0.2.0"
features = ["parking_lot"]
optional = true

[dependencies.migration]
version = "*"
path = "../migration"

[dependencies.open]
version = "5.1.2"
features = ["shellexecute-on-windows"]

[dependencies.sea-orm]
version = "0.12.15"
features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"]

[dependencies.sea-query]
version = "0.30.7"
default-features = false
features = ["backend-sqlite", "thread-safe"]

[dependencies.serde]
version = "1.0.202"
features = ["derive"]

[dependencies.strum]
version = "0.26.2"
features = ["derive"]

[dependencies.tauri]
version = "2.0.0-beta.19"
features = ["protocol-asset"]

[dependencies.tauri-plugin-http]
version = "2.0.0-beta.7"
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[dependencies.tracing]
version = "0.1.40"
features = ["release_max_level_off"]

[dependencies.tracing-appender]
version = "0.2.3"
features = ["parking_lot"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["chrono", "env-filter", "fmt", "json", "parking_lot", "registry"]

[features]
devtools = ["tauri/devtools"]
fresh = ["devtools"]
tokio-console = ["devtools", "dep:console-subscriber", "tokio/tracing"]
