[package]
name = "kotori"
version = "0.1.0"
publish = false

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[build-dependencies.tauri-build]
version = "2.0.0-beta.17"
features = []

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
futures = "0.3.30"
globset = "0.4.14"
image = "0.25.1"
indexmap = "2.2.6"
indoc = "2.0.5"
itertools = "0.13.0"
natord = "1.0.9"
rand = "0.8.5"
serde_json = "1.0.117"
tauri-plugin-clipboard-manager = "2.1.0-beta.4"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-manatsu = "0.11.6"
tauri-plugin-persisted-scope = "2.0.0-beta.9"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-store = "2.0.0-beta.8"
tempfile = "3.10.1"
thiserror = "1.0.61"
walkdir = "2.5.0"
zip = "2.1.3"

[dependencies.kotori-migration]
version = "*"
path = "../crates/migration"

[dependencies.open]
version = "5.1.4"
features = ["shellexecute-on-windows"]

[dependencies.sea-orm]
version = "0.12.15"
features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"]

[dependencies.sea-query]
version = "0.30.7"
default-features = false
features = ["backend-sqlite", "thread-safe"]

[dependencies.serde]
version = "1.0.203"
features = ["derive"]

[dependencies.strum]
version = "0.26.2"
features = ["derive"]

[dependencies.tauri]
version = "2.0.0-beta.22"
features = ["protocol-asset", "rustls-tls"]

[dependencies.tauri-plugin-http]
version = "2.0.0-beta.10"
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.38.0"
features = ["full"]

[dependencies.tracing]
version = "0.1.40"
features = ["release_max_level_off"]

[dependencies.tracing-appender]
version = "0.2.3"
features = ["parking_lot"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["chrono", "env-filter", "fmt", "json", "parking_lot", "registry"]

[features]
devtools = ["tauri/devtools"]
ephemeral = ["devtools"]
