[package]
name = "kotori"
version = "0.1.0"
publish = false

[package.edition]
workspace = true

[package.license]
workspace = true

[lints]
workspace = true

[build-dependencies.tauri-build]
version = "2.0.0-beta.19"
features = []

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
future-iter = "0.1.3"
futures = "0.3.30"
globset = "0.4.14"
image = "0.25.2"
indexmap = "2.2.6"
itertools = "0.13.0"
natord = "1.0.9"
rand = "0.8.5"
serde_json = "1.0.120"
tauri-plugin-clipboard-manager = "2.1.0-beta.6"
tauri-plugin-dialog = "2.0.0-beta.11"
tauri-plugin-manatsu = "0.14.0"
tauri-plugin-persisted-scope = "2.0.0-beta.11"
tauri-plugin-prevent-default = "0.1.12"
tauri-plugin-single-instance = "2.0.0-beta.11"
tauri-plugin-shell = "2.0.0-beta.9"
tauri-plugin-window-state = "2.0.0-beta.11"
thiserror = "1.0.63"
walkdir = "2.5.0"
zip = "2.1.5"

[dependencies.kotori-entity]
path = "../crates/entity"

[dependencies.kotori-migration]
path = "../crates/migration"

[dependencies.open]
version = "5.3.0"
features = ["shellexecute-on-windows"]

[dependencies.sea-orm]
version = "0.12.15"
features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"]

[dependencies.sea-query]
version = "0.30.7"
default-features = false
features = ["backend-sqlite", "thread-safe"]

[dependencies.semver]
version = "1.0.23"
features = ["serde"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.sqlx]
version = "0.7.4"
default-features = false

[dependencies.strum]
version = "0.26.3"
features = ["derive"]

[dependencies.tauri]
version = "2.0.0-beta.24"
features = ["protocol-asset", "rustls-tls"]

[dependencies.tauri-plugin-http]
version = "2.0.0-beta.12"
features = ["rustls-tls"]

[dependencies.tauri-plugin-pinia]
version = "0.1.11"
features = ["ahash"]

[dependencies.tokio]
version = "1.39.1"
features = ["full"]

[dependencies.tracing]
version = "0.1.40"
features = ["release_max_level_off"]

[dependencies.tracing-appender]
version = "0.2.3"
features = ["parking_lot"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["chrono", "env-filter", "fmt", "json", "parking_lot", "registry"]

[dependencies.uuid]
version = "1.10.0"
features = ["v4", "v7", "fast-rng"]

[features]
devtools = ["tauri/devtools"]
open-main-devtools = ["devtools"]
open-reader-devtools = ["devtools"]
tracing-level-off = ["tracing/max_level_off"]
tracing-level-error = ["tracing/max_level_error"]
tracing-level-warn = ["tracing/max_level_warn"]
tracing-level-info = ["tracing/max_level_info"]
tracing-level-debug = ["tracing/max_level_debug"]
tracing-level-trace = ["tracing/max_level_trace"]
