[package]
name = "kotori"
version = "0.1.0"
license = "MIT"
publish = false

[package.edition]
workspace = true

[lints]
workspace = true

[build-dependencies.tauri-build]
version = "2.0.0-beta.19"
features = []

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
future-iter = "0.1.4"
futures = "0.3.30"
globset = "0.4.14"
image = "0.25.2"
indexmap = "2.2.6"
itertools = "0.13.0"
natord = "1.0.9"
rand = "0.8.5"
serde_json = "1.0.121"
tauri-plugin-clipboard-manager = "2.1.0-beta.6"
tauri-plugin-dialog = "2.0.0-beta.11"
tauri-plugin-manatsu = "1.0.0-alpha.1"
tauri-plugin-persisted-scope = "2.0.0-beta.11"
tauri-plugin-single-instance = "2.0.0-beta.11"
tauri-plugin-shell = "2.0.0-beta.9"
tauri-plugin-window-state = "2.0.0-beta.11"
thiserror = "1.0.63"
walkdir = "2.5.0"
zip = "2.1.5"

[dependencies.diesel]
version = "2.2.2"
features = ["sqlite", "returning_clauses_for_sqlite_3_35"]

[dependencies.open]
version = "5.3.0"
features = ["shellexecute-on-windows"]

[dependencies.libsqlite3-sys]
version = "0.29"
features = ["bundled"]

[dependencies.semver]
version = "1.0.23"
features = ["serde"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.strum]
version = "0.26.3"
features = ["derive"]

[dependencies.tauri]
version = "2.0.0-beta.25"
features = ["protocol-asset", "rustls-tls"]

[dependencies.tauri-plugin-http]
version = "2.0.0-beta.12"
features = ["rustls-tls"]

[dependencies.tauri-plugin-pinia]
version = "0.3.3"
features = ["ahash"]

[dependencies.tauri-plugin-prevent-default]
version = "0.2.1"
features = ["ahash"]

[dependencies.tokio]
version = "1.39.2"
features = ["full"]

[dependencies.tracing]
version = "0.1.40"
optional = true

[dependencies.tracing-appender]
version = "0.2.3"
optional = true
features = ["parking_lot"]

[dependencies.tracing-subscriber]
version = "0.3.18"
optional = true
features = ["chrono", "env-filter", "fmt", "json", "parking_lot", "registry"]

[dependencies.uuid]
version = "1.10.0"
features = ["v4", "v7", "fast-rng"]

[features]
devtools = ["tauri/devtools"]
open-main-devtools = ["devtools"]
open-reader-devtools = ["devtools"]
tracing = [
  "dep:tracing",
  "dep:tracing-appender",
  "dep:tracing-subscriber",
  "tauri-plugin-manatsu/tracing",
  "tauri-plugin-pinia/tracing",
]
tracing-level-error = ["tracing", "tracing/max_level_error"]
tracing-level-warn = ["tracing", "tracing/max_level_warn"]
tracing-level-info = ["tracing", "tracing/max_level_info"]
tracing-level-debug = ["tracing", "tracing/max_level_debug"]
tracing-level-trace = ["tracing", "tracing/max_level_trace"]
