[package]
name = "kotori-entity"
version = "0.1.0"
publish = false

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[dependencies.sea-orm]
version = "0.12.15"
features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]
